[metadata]
name = manta
author = Lisa Röttjers
author-email = lisa.rottjers@kuleuven.be
summary = Microbial association network clustering
license = Apache-2.0
long_description = README.md
long_description_content_type = "text/markdown"
home-page = https://github.com/ramellose/manta
requires-python = >=3.5
classifier =
    Development Status :: 4 - Beta/Unstable
    Environment :: Console
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python

[files]
packages =
    manta

[entry_points]
pbr.config.drivers =
    plain = pbr.cfg.driver:Plain
console_scripts =
    manta = manta.main:main
